# NEXUS

./: .gitignore  README.md  debug_openrouter.py  debug_streaming.py  models.json  nexus.json  pyproject.toml  start.sh
nexus/: __init__.py  config.py  main.py
nexus/api/: server.py
nexus/api/routes/: chat.py  cognitive.py  system.py
nexus/core/: __init__.py  config.py  dopamine_reward.py  emotional_state.py  fractal_estimator.py  geometric_router.py  pid_controller.py  self_awareness.py
nexus/engine/: __init__.py  bicameral_engine.py  hybrid_engine.py  processors.py  synthesizer.py
nexus/integrations/: openrouter.py
nexus/memory/: chroma_store.py
nexus/tools/: __init__.py  filesystem.py  introspection.py  manager.py  terminal.py
nexus_data/: chroma.sqlite3
tests/: test_core.py
ui/: .gitignore  package-lock.json  package.json
ui/src/: App.tsx  api.ts
ui/src/components/chat/: ChatArea.tsx  ModelSelector.tsx  ThinkingBlock.tsx  ToolBlock.tsx
ui/src/components/dashboard/: CognitiveCompass.tsx  CognitiveDashboard.tsx  ManifoldGauge.tsx  RegulationLog.tsx
ui/src/components/layout/: Layout.tsx  Sidebar.tsx
ui/src/components/settings/: SettingsModal.tsx
workspace/: workspace_agent_instructions.md
